fixed navbar alignment and size for all screens

--- a/styles/about.css
+++ b/styles/about.css
@@ -15,16 +15,27 @@ header {
     background-color:#fff;
 }
 
-header a {
-    display:inline-block;
+header #logo .logoLink {
+    display:block;
     padding: 15px;
     text-decoration: none;
     color: black;
+    
+}
+
+
+header a {
+    display:inline-block;
+    padding: 10px; 
+    text-decoration: none;
+    color: black;
+    font-size: 0.9em;
 }
 
 header nav li {
     display: inline-block;
 }
+
 
 header #logo {
     font-size: 1.5em;
@@ -265,6 +276,10 @@ footer .contact-form button {
     header nav {
        display: inline-block;
        width: 60%; 
+    }
+
+    header nav ul {
+        text-align: right;
     }
     
     .events-container, .faq-container {
