--- a/styles/contact.css
+++ b/styles/contact.css
@@ -15,21 +15,29 @@ header {
     background-color:#fff;
 }
 
-header a {
-    display:inline-block;
+header #logo .logoLink {
+    display:block;
     padding: 15px;
     text-decoration: none;
+    color: black;   
+}
+
+header a {
+    display:inline-block;
+    padding: 10px; 
+    text-decoration: none;
     color: black;
+    font-size: 0.9em;
 }
 
 header nav li {
     display: inline-block;
 }
 
+
 header #logo {
     font-size: 1.5em;
-    font-family:'Open Sans', sans-serif;
-    
+    font-family:'Open Sans', sans-serif; 
 }
 
 header nav a:hover {
@@ -42,7 +50,6 @@ header nav a {
 header .active {
     background-color: rgba(0, 0, 0, .2);
 }
-
 
 
 /*Showcase section */
@@ -195,6 +202,10 @@ footer .contact-form button {
         display: inline-block;
         width: 30%;
         padding: 5px 20px; 
+    }
+
+    header nav ul {
+        text-align: right;
     }
 
     header nav {
