--- a/styles/home.css
+++ b/styles/home.css
@@ -15,16 +15,27 @@ header {
     background-color:#fff;
 }
 
-header a {
-    display:inline-block;
+header #logo .logoLink {
+    display:block;
     padding: 15px;
     text-decoration: none;
     color: black;
+    
+}
+
+
+header a {
+    display:inline-block;
+    padding: 10px; 
+    text-decoration: none;
+    color: black;
+    font-size: 0.9em;
 }
 
 header nav li {
     display: inline-block;
 }
+
 
 header #logo {
     font-size: 1.5em;
@@ -326,13 +337,18 @@ footer .contact-form button {
     header #logo {
         display: inline-block;
         width: 30%;
-        padding: 5px 20px;
-        
+        padding: 5px 20px;  
     }
+
     header nav {
        display: inline-block;
        width: 60%; 
     }
+
+    header nav ul {
+        text-align: right;
+    }
+
     #intro {
         height: 500px;
     }
