--- a/styles/services.css
+++ b/styles/services.css
@@ -15,11 +15,19 @@ header {
     background-color:#fff;
 }
 
-header a {
-    display:inline-block;
+header #logo .logoLink {
+    display:block;
     padding: 15px;
     text-decoration: none;
+    color: black; 
+}
+
+header a {
+    display:inline-block;
+    padding: 10px; 
+    text-decoration: none;
     color: black;
+    font-size: 0.9em;
 }
 
 header nav li {
@@ -29,7 +37,6 @@ header nav li {
 header #logo {
     font-size: 1.5em;
     font-family:'Open Sans', sans-serif;
-    
 }
 
 header nav a:hover {
@@ -42,7 +49,6 @@ header nav a {
 header .active {
     background-color: rgba(0, 0, 0, .2);
 }
-
 
 .call-to-action a {
     text-align: center;
@@ -195,6 +201,10 @@ footer .contact-form button {
         padding: 5px 20px; 
     }
 
+    header nav ul {
+        text-align: right;
+    }
+
     header nav {
        display: inline-block;
        width: 60%; 
@@ -232,14 +242,14 @@ footer .contact-form button {
 
 
 @media screen and (min-width: 1040px ){
-    .services-container {
+     .services-container {
         display: flex;
         flex-direction: row;
         align-items: stretch;
-        max-width: 1024px;
+        max-width: 1024px; 
         margin: auto;
         text-align: center;
-    }
+    } 
 
     .service {
         display: inline-block;
